Added offset and limit to DatabaseService.getAllRecordsFromTable method.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ app.version=1.0.0
 
 # File storage configuration
 database.storage.path=
+# Limit parameter value
+limit=100
+# Offset parameter value
+offset=0
