--- a/src/test/resources/Db_app_properties_files/applicationFileExist.properties
+++ b/src/test/resources/Db_app_properties_files/applicationFileExist.properties
@@ -1,2 +1,6 @@
 # File storage configuration
 database.storage.path=database-test
+# Limit parameter value
+limit=10
+# Offset parameter value
+offset=1
