Added application parameters to properties file.

--- a/database/src/test/resources/Db_app_properties_files/application.properties
+++ b/database/src/test/resources/Db_app_properties_files/application.properties
@@ -1,2 +1,12 @@
 # Limit parameter value
 limit=100
+# Application port
+port=80
+# Database username
+database.username=test_user
+#Database password
+database.password=Qwerty!1
+#Database base URL
+database.base.url=jdbc:mysql://localhost:3306/
+#Database name
+database.name=test_entities
