Added application parameters to properties file. (#55)
* Added application parameters to properties file.

* Fixed PR comments.

* Cosmetic fix.

* Fixes after merge.

--- a/database/src/main/resources/application.properties
+++ b/database/src/main/resources/application.properties
@@ -6,3 +6,13 @@ app.version=1.0.0
 database.storage.path=
 # Limit parameter value
 limit=100
+# Application port
+port=8080
+# Database username
+database.username=db_user
+# Database password
+database.password=Qwerty!1
+# Database base URL
+database.base.url=jdbc:mysql://localhost:3306/
+# Database name
+database.name=entities
