Fixed PR comments.

--- a/database/src/test/resources/Db_app_properties_files/application.properties
+++ b/database/src/test/resources/Db_app_properties_files/application.properties
@@ -10,3 +10,7 @@ database.password=Qwerty!1
 database.base.url=jdbc:mysql://localhost:3306/
 #Database name
 database.name=test_entities
+# Initial pool size
+initial.pool.size=5
+# Max pool size
+max.pool.size=10
